Changed spacing for EEG figure

--- a/_publications/2025-03-03-KnowEEG.md
+++ b/_publications/2025-03-03-KnowEEG.md
@@ -2,7 +2,7 @@
 title: "KnowEEG: Explainable Knowledge Driven EEG Classification"
 collection: publications
 permalink: /publications/KnowEEG
-excerpt: "We developed KnowEEG, a novel machine learning pipeline for EEG classification that addresses the 'black box' problem of modern deep learning models. By extracting a comprehensive set of understandable features from EEG signals and using a custom tree-based model (fusion forest), KnowEEG achieves state-of-the-art performance while providing full model explainability. This work demonstrates that our approach can not only match the performance of complex deep learning architectures across five different EEG tasks but also discover correct, verifiable neuroscientific knowledge from the data"
+excerpt: "We developed KnowEEG, a novel machine learning pipeline for EEG classification that addresses the 'black box' problem of modern deep learning models. By extracting a comprehensive set of understandable features from EEG signals and using a custom tree-based model (fusion forest), KnowEEG achieves state-of-the-art performance while providing full model explainability. This work demonstrates that our approach can not only match the performance of complex deep learning architectures across five different EEG tasks but also discover correct, verifiable neuroscientific knowledge from the data."
 date: 2025-03-03
 venue: Undergoing Review
 paperurl: https://arxiv.org/abs/2505.00541
